itamae/cookbooks/iptables-persistent/files/rules-moeka.v4
# Generated by iptables-save v1.4.21 on Sun Mar 20 19:56:10 2016
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Sun Mar 20 19:56:10 2016
# Generated by iptables-save v1.4.21 on Sun Mar 20 19:56:10 2016
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o enp+ -s 172.16.0.0/12 -j MASQUERADE
COMMIT
# Completed on Sun Mar 20 19:56:10 2016
# Generated by iptables-save v1.4.21 on Sun Mar 20 19:56:10 2016
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Sun Mar 20 19:56:10 2016
# Generated by iptables-save v1.4.21 on Sun Mar 20 19:56:10 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:FORWARD_DENY - [0:0]
:FORWARD_LAN - [0:0]
:FORWARD_VPN - [0:0]
:INPUT_DENY - [0:0]
:INPUT_LAN - [0:0]
:INPUT_SRV - [0:0]
:INPUT_OPEN - [0:0]
:INPUT_TUNNEL - [0:0]
:INPUT_WORLD - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j INPUT_OPEN
-A INPUT -s 169.254.225.0/24 -i vti+ -j INPUT_TUNNEL
-A INPUT -s 172.18.0.0/15 -i eth_+ -j INPUT_LAN
-A INPUT -i vti+ -j INPUT_LAN
-A INPUT -i vti+ -j INPUT_SRV
-A INPUT -i eth_srv -j INPUT_SRV
-A INPUT -i eth_mgmt -j INPUT_SRV
-A INPUT -i enp+ -j INPUT_WORLD
-A INPUT -j INPUT_DENY
-A FORWARD -i eth_+ -j FORWARD_LAN
-A FORWARD -i vti+ -j FORWARD_VPN
-A FORWARD -s 172.18.0.0/15 -d 172.18.0.0/15 -i vti+ -o vti+ -j ACCEPT
-A FORWARD -j FORWARD_DENY
-A FORWARD_DENY -i eth_+ -j REJECT --reject-with icmp-host-prohibited
-A FORWARD_DENY -i vti+ -j REJECT --reject-with icmp-host-prohibited
-A FORWARD_LAN -d 172.18.0.0/15 -o vti+ -j ACCEPT
-A FORWARD_LAN -d 172.20.0.0/21 -o vti+ -j ACCEPT
-A FORWARD_VPN -d 172.19.0.0/21 -o eth_+ -j ACCEPT
-A INPUT_DENY -i eth_+ -j REJECT --reject-with icmp-host-prohibited
-A INPUT_DENY -i vti+ -j REJECT --reject-with icmp-host-prohibited
-A INPUT_LAN -p tcp -m tcp --dport 53 -m comment --comment dns -j ACCEPT
-A INPUT_LAN -p udp -m udp --dport 53 -m comment --comment dns -j ACCEPT
-A INPUT_LAN -p tcp -m tcp --dport 443 -m comment --comment https -j ACCEPT
-A INPUT_LAN -p tcp -m tcp --dport 80 -m comment --comment http -j ACCEPT
-A INPUT_LAN -p tcp -m tcp --dport 5201 -m comment --comment iperf3 -j ACCEPT
-A INPUT_SRV -p tcp -m tcp --dport 3306 -m comment --comment mysql -j ACCEPT
-A INPUT_SRV -p tcp -m tcp --dport 6379 -m comment --comment redis -j ACCEPT
-A INPUT_OPEN -p tcp -m tcp --dport 3722 -m comment --comment ssh -j ACCEPT
-A INPUT_TUNNEL -p ospf -j ACCEPT
-A INPUT_TUNNEL -p tcp -m tcp --dport 179 -m comment --comment bgp -j ACCEPT
-A INPUT_WORLD -p udp -m udp --dport 4500 -m comment --comment mobike -j ACCEPT
-A INPUT_WORLD -p udp -m udp --dport 500 -m comment --comment ike -j ACCEPT
-A INPUT_WORLD -p esp -m comment --comment ipsec-esp -j ACCEPT
COMMIT
# Completed on Sun Mar 20 19:56:10 2016
