itamae/cookbooks/iptables-persistent/files/rules-moeka.v6
# Generated by ip6tables-save v1.4.21 on Tue Mar 15 00:43:39 2016
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Tue Mar 15 00:43:39 2016
# Generated by ip6tables-save v1.4.21 on Tue Mar 15 00:43:39 2016
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Mar 15 00:43:39 2016
# Generated by ip6tables-save v1.4.21 on Tue Mar 15 00:43:39 2016
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Tue Mar 15 00:43:39 2016
# Generated by ip6tables-save v1.4.21 on Tue Mar 15 00:43:39 2016
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Tue Mar 15 00:43:39 2016
# Generated by ip6tables-save v1.4.21 on Tue Mar 15 00:43:39 2016
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:FORWARD_DENY - [0:0]
:FORWARD_LAN - [0:0]
:FORWARD_VPN - [0:0]
:INPUT_DENY - [0:0]
:INPUT_LAN - [0:0]
:INPUT_SRV - [0:0]
:INPUT_OPEN - [0:0]
:INPUT_WORLD - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -j INPUT_OPEN
-A INPUT -i vti+ -j INPUT_LAN
-A INPUT -i eth_+ -j INPUT_LAN
-A INPUT -i vti+ -j INPUT_SRV
-A INPUT -i eth_srv -j INPUT_SRV
-A INPUT -i eth_mgmt -j INPUT_SRV
-A INPUT -i eno+ -j INPUT_WORLD
-A INPUT -j INPUT_DENY
-A FORWARD -i eth_+ -j FORWARD_LAN
-A FORWARD -i vti+ -j FORWARD_VPN
-A FORWARD -j FORWARD_DENY
-A FORWARD_DENY -i eth_+ -j REJECT --reject-with icmp6-adm-prohibited
-A FORWARD_DENY -i vti+ -j REJECT --reject-with icmp6-adm-prohibited
-A INPUT_DENY -i eth_+ -j REJECT --reject-with icmp6-adm-prohibited
-A INPUT_DENY -i vti+ -j REJECT --reject-with icmp6-adm-prohibited
-A INPUT_LAN -p tcp -m tcp --dport 53 -m comment --comment dns -j ACCEPT
-A INPUT_LAN -p udp -m udp --dport 53 -m comment --comment dns -j ACCEPT
-A INPUT_LAN -p tcp -m tcp --dport 443 -m comment --comment https -j ACCEPT
-A INPUT_LAN -p tcp -m tcp --dport 80 -m comment --comment http -j ACCEPT
-A INPUT_SRV -p tcp -m tcp --dport 3306 -m comment --comment mysql -j ACCEPT
-A INPUT_SRV -p tcp -m tcp --dport 6379 -m comment --comment redis -j ACCEPT
-A INPUT_OPEN -p tcp -m tcp --dport 3722 -m comment --comment ssh -j ACCEPT
-A INPUT_WORLD -p udp -m udp --dport 500 -m comment --comment ike -j ACCEPT
-A INPUT_WORLD -p esp -m comment --comment ipsec-esp -j ACCEPT
COMMIT
# Completed on Tue Mar 15 00:43:39 2016
